--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,125 +1,47 @@
+# This is a basic workflow to help you get started with Actions
+
 name: release
+
+# Controls when the action will run. Triggers the workflow on push or pull request
+# events but only for the master branch
 on:
-  workflow_dispatch:
+ workflow_dispatch:
+ 
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  jest:
+  # This workflow contains a single job called "build"
+  build:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - uses: actions/checkout@master
-      - uses: actions/setup-node@master
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
 
       - name: Cache node modules
-        uses: actions/cache@v1
-        id: cache
+        uses: actions/cache@v2
+        id: node_cache
         with:
           path: node_modules
           key: node-modules-${{ hashFiles('**/yarn.lock') }}
 
-      - name: Install Dependencies
-        if: steps.cache.outputs.cache-hit != 'true'
-        run: yarn install
-
-      - run: yarn test
-
-  ios:
-    runs-on: macos-latest
-    timeout-minutes: 15
-
-    env:
-      DEVELOPER_DIR: /Applications/Xcode_11.2.app
-    steps:
-      - uses: actions/checkout@master
-      - uses: actions/setup-node@master
-
-      - name: Cache node modules
-        uses: actions/cache@v1
-        id: cache
+      - name: Cache gradle
+        uses: actions/cache@v2
         with:
-          path: node_modules
-          key: node-modules-${{ hashFiles('**/yarn.lock') }}
-
-      - name: Rebuild detox
-        if: steps.cache.outputs.cache-hit == 'true'
-        run: yarn detox-setup
-
+          path: ~/.gradle/caches
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
+          restore-keys: ${{ runner.os }}-gradle
+          
       - name: Install Dependencies
-        if: steps.cache.outputs.cache-hit != 'true'
-        run: yarn install
-
-      - name: Cache Pods
-        uses: actions/cache@v1
-        id: podcache
-        with:
-          path: ios/Pods
-          key: pods-${{ hashFiles('**/Podfile.lock') }}
-
-      - name: Update Pods
         run: |
-          gem update cocoapods xcodeproj
-          cd ios && pod install && cd ..
+          yarn
+          npx jetifier
+          
+      - name: Build
+        run: cd android && ./gradlew assembleRelease && cd ../
 
-      - run: brew tap wix/brew
-      - run: brew install applesimutils
-      - run: yarn detox build e2e --configuration ios.sim.release
-      - run: yarn detox test e2e --configuration ios.sim.release --cleanup
-
-  android:
-    runs-on: macos-latest
-
-    steps:
-      - uses: actions/checkout@v1
-      - uses: actions/setup-node@master
-
-      - name: set up JDK 1.8
-        uses: actions/setup-java@v1
+      - name: Upload artifact
+        uses: actions/upload-artifact@v2
         with:
-          java-version: 1.8
-
-      - name: Cache node modules
-        uses: actions/cache@v1
-        id: cache
-        with:
-          path: node_modules
-          key: node-modules-${{ hashFiles('**/yarn.lock') }}
-
-      - name: Install Dependencies
-        if: steps.cache.outputs.cache-hit != 'true'
-        run: yarn install
-
-      - name: Run Android Emulator
-        run: echo "y" | $ANDROID_HOME/tools/bin/sdkmanager --install 'system-images;android-28;default;x86'
-
-      - run: echo "no" | $ANDROID_HOME/tools/bin/avdmanager create avd --force -n test -k 'system-images;android-28;default;x86' --device "Nexus 5X"
-      - run: nohup $ANDROID_HOME/emulator/emulator -avd test -skin 768x1280 -no-audio -no-snapshot -no-window &
-
-      - run: $ANDROID_HOME/platform-tools/adb wait-for-device shell 'while [[ -z $(getprop sys.boot_completed | tr -d '\r') ]]; do sleep 1; done; input keyevent 82'
-      - run: yarn detox build -c android.emu.debug
-      - run: yarn start & yarn detox test -H -c android.emu.debug
-
-  release:
-    name: Release
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v1
-      - name: Setup Node.js
-        uses: actions/setup-node@v1
-        with:
-          node-version: 12
-
-      - name: Cache node modules
-        uses: actions/cache@v1
-        id: cache
-        with:
-          path: node_modules
-          key: node-modules-${{ hashFiles('**/yarn.lock') }}
-
-      - name: Install Dependencies
-        if: steps.cache.outputs.cache-hit != 'true'
-        run: yarn install
-
-      - name: Release
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: npx semantic-release
+          path: android/app/build/outputs/apk/release/app-release.apk
