--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,6 +18,16 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+      
+      - name: Cache Node.js modules
+        uses: actions/cache@v2
+        with:
+         # npm cache files are stored in `~/.npm` on Linux/macOS
+         path: ~/.npm 
+         key: ${{ runner.OS }}-node-${{ hashFiles('**/yarn.lock') }}
+         restore-keys: |
+           ${{ runner.OS }}-node-
+           ${{ runner.OS }}-
 
       - name: Cache node modules
         uses: actions/cache@v2
