--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,7 +38,7 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          yarn --frozen-lockfile
+          yarn
           npx jetifier
 
       - name: Cache gradle
