--- a/.github/workflows/check_env.yml
+++ b/.github/workflows/check_env.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Test ENV
         env:
-          TEAM_NAME: cat $(echo ${{ github.ref }} | cut -f3 -d/)
+          TEAM_NAME: $(cat $(echo ${{ github.ref }} | cut -f3 -d/))
           BUILD_NUMBER: ${{ github.run_number }}
         run: |
           echo ${{ env.TEAM_NAME }}
