--- a/.github/workflows/check_env.yml
+++ b/.github/workflows/check_env.yml
@@ -26,7 +26,7 @@ jobs:
         env:
           BUILD_NUMBER: ${{ github.run_number }}
         run: |
-          echo ${{ env.TEAM_NAME }}
+          echo ${{ env.GITHUB_HEAD_REF }}
           echo ${{ env.BUILD_NUMBER }}
           echo ${{ github.base_ref }}
           echo ${{ github.run_number }}
